cabal-version:      >=1.10
name:               bl
version:            0.5.0
author:             Miro Varga
maintainer:         hello@mirovarga.com
build-type:         Simple
extra-source-files:
  LICENSE
  README.md

executable bl
  hs-source-dirs:   src/bl
  main-is:          Main.hs
  build-depends:
      base              >=4.13
    , bl
    , optparse-generic

  default-language: Haskell2010

library
  hs-source-dirs:   src/lib
  exposed-modules:
    Markdown
    Mustache
    Post
    SSG

  build-depends:
      aeson
    , base       >=4.13
    , directory
    , filepath
    , fsutils
    , lucid
    , mmark
    , stache
    , text
    , time

  default-language: Haskell2010
