cabal-version:      >=1.10
name:               bl
version:            0.6.0
author:             Miro Varga
maintainer:         hello@mirovarga.com
build-type:         Simple
extra-source-files:
  LICENSE
  README.md

executable bl
  hs-source-dirs:   src/bl
  main-is:          Main.hs
  build-depends:
      base              >=4.13
    , bl
    , optparse-generic

  default-language: Haskell2010

library
  hs-source-dirs:   src/lib
  exposed-modules:
    Markdown
    Mustache
    Post
    SSG
    Static

  build-depends:
      aeson
    , base            >=4.13
    , directory
    , filepath
    , fsutils
    , lucid
    , mmark
    , servant-server
    , stache
    , text
    , time
    , warp

  default-language: Haskell2010
